--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -60,7 +60,15 @@ function authInfo(response) {
 VK.Auth.getLoginStatus(authInfo);
 VK.UI.button('login_button');
 </script>
-
+<br>
+<br>
+<div id="main" align="center">
+like | share | << | >> | new | magic
+<br>
+<br>
+<img src="https://res.cloudinary.com/ummwut/image/upload/v1376132166/1001.gif" />
+<br> 
+</div>
 </body>
 </html>
 
