--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -44,6 +44,7 @@ function authInfo(response) {
     });
 
     yourid = response.session.mid; 
+    alert(yourid);
     /*
     VK.Api.call('users.get',  {fields: ['uid', 'first_name', 'last_name'], order: 'name', uids: '{{ userid }}'}, function(r){
        if(r.response){
@@ -66,7 +67,7 @@ VK.UI.button('login_button');
 like | share | << | >> | new | magic
 <br>
 <br>
-<img src="https://res.cloudinary.com/ummwut/image/upload/v1376132166/1001.gif" />
+<img src="http://cs7009.vk.me/c540100/v540100653/c500/2TL9XHB1f0U.jpg" />
 <br> 
 </div>
 </body>
