--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -15,7 +15,6 @@
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="style.css" /> --!>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script src="/js/app.js"></script>
   
     <link rel="StyleSheet" href="/css/index.css" />
     <link rel="StyleSheet" href="/css/normalize.css">
@@ -79,9 +78,11 @@ VK.UI.button('login_button');
 <a id="next" href="#">>></a>
 <br>
 <br>
-<img id="demotivator" data-id="0" src="http://cs7009.vk.me/c540100/v540100653/c500/2TL9XHB1f0U.jpg" />
+<img id="demotivator" data-picid="-1" src="http://cs7009.vk.me/c540100/v540100653/c500/2TL9XHB1f0U.jpg" />
 <br> 
 </div>
 </body>
+
+    <script src="/js/app.js"></script>
 </html>
 
