--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -68,11 +68,11 @@ VK.UI.button('login_button');
 <div id="menu" align = right>
 <a href="#">new</a> |
 <a href="#">magic</a> |
-<a href="#">favourites</a> 
+<a href="#" id="favorites">favorites</a> 
 </div>
 <br><br>
 
-<a href="#"><<</a> |
+<!-- <a href="#"><<</a> | --!>
 <a id="like" href="#">like</a> |
 <a href="#">share</a> |
 <a id="next" href="#">>></a>
