--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -61,6 +61,8 @@ VK.Auth.getLoginStatus(authInfo);
 VK.UI.button('login_button');
 </script>
 
+
+<a href="/login/vk">login via vk</a>
 <br>
 <br>
 <div id="main" align="center">
