--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -62,7 +62,7 @@ VK.UI.button('login_button');
 </script>
 
 
-<a href="/login/vk">login via vk</a>
+<a href="/login/vkontakte">login via vk</a>
 <br>
 <br>
 <div id="main" align="center">
