--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -83,6 +83,7 @@ VK.UI.button('login_button');
 
 <!-- <a href="#"><<</a> | --!>
 <a id="like" href="#">like</a> |
+<a id="hate" href="#">hate</a> |
 <a href="#">share</a> |
 <a id="next" href="#">>></a>
 <br>
