--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -62,6 +62,19 @@ VK.UI.button('login_button');
 </script>
 
 
+<script type="text/javascript">(function() {
+  if (window.pluso)if (typeof window.pluso.start == "function") return;
+  if (window.ifpluso==undefined) { window.ifpluso = 1;
+    var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
+    s.type = 'text/javascript'; s.charset='UTF-8'; s.async = true;
+    s.src = ('https:' == window.location.protocol ? 'https' : 'http')  + '://share.pluso.ru/pluso-like.js';
+    var h=d[g]('body')[0];
+    h.appendChild(s);
+  }})();</script>
+
+<div align="center" class="pluso" data-background="transparent" data-options="big,round,line,horizontal,counter,theme=06" data-services="vkontakte,odnoklassniki,moimir" data-user="474440128"></div>
+
+
 {% if session.username %}
     <a id="hlogin" data-userid={{ session['user_id'] }} href="/login/vkontakte">{{ session['username'] }}</a>
     <a href="/logout">(logout)</a>
