add pluso buttons

--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -98,6 +98,7 @@ VK.UI.button('login_button');
 <a id="like" href="#">like</a> |
 <a id="hate" href="#">hate</a> |
 <a href="#">share</a> |
+<a href="http://vkontakte.ru/share.php?url=http://funtastik.herokuapp.com" target="_blank">Поделиться</a>
 <a id="next" href="#">>></a>
 <br>
 <br>
