--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -1,7 +1,7 @@
 <!doctype html>  
 <html>
 <head>
-    <title>Steena</title>	
+    <title>Funtastik! - лучшие демотиваторы, только для тебя</title>	
     
     <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
