--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -56,12 +56,12 @@
 </div>
 <br><br>
 
-<a id="like" href="#">&nbsp</a>
-<a id="hate" href="#">&nbsp</a>
-<a id="share" href="http://vkontakte.ru/share.php?url=http://funtastik.herokuapp.com" target="_blank">&nbsp</a>
+<a id="like" href="#" class="icon">&nbsp</a>
+<a id="hate" href="#" class="icon">&nbsp</a>
+<a id="share" href="http://vkontakte.ru/share.php?url=http://funtastik.herokuapp.com" target="_blank" class="icon">&nbsp</a>
 <br>
 <br>
-<img id="demotivator" data-picid="-1" src="http://cs7009.vk.me/c540100/v540100653/c500/2TL9XHB1f0U.jpg" />
+<a align="center" href="#"><img id="demotivator" data-picid="-1" src="http://cs7009.vk.me/c540100/v540100653/c500/2TL9XHB1f0U.jpg" /></a>
 <br> 
 </div>
 </body>
