--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -59,8 +59,11 @@
 <br><br>
 -->
 
+100
 <a id="like" href="#" class="icon">&nbsp</a>
+5
 <a id="hate" href="#" class="icon">&nbsp</a>
+&nbsp;&nbsp;
 <a id="share" href="http://vkontakte.ru/share.php?url=http://funtastik.herokuapp.com" target="_blank" class="icon">&nbsp</a>
 <br>
 <br>
