--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -65,6 +65,7 @@
 <a id="hate" href="#" class="icon">&nbsp</a>
 &nbsp;&nbsp;
 <a id="share" href="http://vkontakte.ru/share.php?url=http://funtastik.herokuapp.com" target="_blank" class="icon">&nbsp</a>
+<a id="search" href="#" class="icon">&nbsp</a>
 <br>
 <br>
 
