load user likes

--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -15,6 +15,7 @@
     <!-- <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet"> --!>
     <!-- <link rel="stylesheet" href="style.css" /> --!>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
   
     <link rel="StyleSheet" href="/css/index.css" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
