--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -77,6 +77,8 @@
     <a align="center" href="#"><img id="demotivator" data-picid="-1" src="http://cs7009.vk.me/c540100/v540100653/c500/2TL9XHB1f0U.jpg" /></a>
 {% endif %}
 
+<div id="abslink">link to this demotivator: <a href="http://funtastiq.ru/{{ image['cloudinary'].public_id }}">http://funtastiq.ru/{{ image['cloudinary'].public_id }}</a></div>
+
 <br> 
 </div>
 </body>
