--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -66,7 +66,7 @@
 <span id="downvotes"></span>
 <a id="hate" href="#" class="icon">&nbsp</a>
 &nbsp;&nbsp;
-<a id="share" href="http://vkontakte.ru/share.php?url=http://funtastik.herokuapp.com" target="_blank" class="icon">&nbsp</a>
+<a id="share" href="http://vkontakte.ru/share.php?url=http://funtastiq.ru/{{ image['cloudinary'].public_id }}" target="_blank" class="icon">&nbsp</a>
 <a id="search" href="#" class="icon">&nbsp</a>
 <br>
 <br>
