--- a/funtastik/templates/home.html
+++ b/funtastik/templates/home.html
@@ -114,7 +114,7 @@
     <a align="center" href="#"><img id="demotivator" data-picid="{{ image['cloudinary']['public_id'] }}" src="{{ image['cloudinary']['url'] }}" /></a>
     <div id="abslink">link to this demotivator: <a href="http://funtastiq.ru/{{ image['cloudinary'].public_id }}">http://funtastiq.ru/{{ image['cloudinary'].public_id }}</a></div>
 {% else %}
-    <a align="center" href="#"><img id="demotivator" data-picid="-1" src="http://cs7009.vk.me/c540100/v540100653/c500/2TL9XHB1f0U.jpg" /></a>
+    <a align="center" href="#"><img id="demotivator" data-picid="-1" src="http://res.cloudinary.com/hmtpkyvtl/image/upload/v1396296054/jamnqy5oog1cbm6websv.jpg" /></a>
 {% endif %}
 
 
