--- a/funtastik/static/css/index.css
+++ b/funtastik/static/css/index.css
@@ -192,3 +192,7 @@ h4 {
     background: url(../images/search-active.png) top left no-repeat; 
 }
 
+a:link {color:#FF0000;}      /* unvisited link */
+a:visited {color:#00FF00;}  /* visited link */
+a:hover {color:#FF00FF;}  /* mouse over link */
+a:active {color:#0000FF;}  /* selected link */
